[gd_scene load_steps=10 format=3 uid="uid://cggbet4rsce02"]

[ext_resource type="Script" path="res://Scripts/Menues/title_menu.gd" id="1_bwj3x"]
[ext_resource type="PackedScene" uid="uid://cdrfw3w0vknif" path="res://Scenes/UI/bg_image.tscn" id="2_in8yf"]
[ext_resource type="FontFile" uid="uid://jr71c7sixvd4" path="res://Themes/FONTS/Test_pixel_font.ttf" id="2_loela"]
[ext_resource type="Texture2D" uid="uid://dnonfh7kaxspj" path="res://Graphics/BG/Char_Select_BG_1x.png" id="3_bfksr"]
[ext_resource type="Theme" uid="uid://6yidb12fyc8i" path="res://Themes/UI_TEXT_BUTTON_THEME.tres" id="3_td2g3"]
[ext_resource type="FontFile" uid="uid://do5flpj1sl71a" path="res://Themes/FONTS/Deicide Remain.otf" id="4_t1wiy"]

[sub_resource type="Animation" id="Animation_dsvkc"]
resource_name = "MENU_JUST_OPENED"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MC_Window_Edge_Bumper/VB_Main/MC_Title_Text/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MC_Window_Edge_Bumper/VB_Main/MC_Play_btn/Play_Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.65, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.54902), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MC_Window_Edge_Bumper/VB_Main/MC_Settings_btn/Settings_Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 0.95, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.54902), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mldh7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MC_Window_Edge_Bumper/VB_Main/MC_Title_Text/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MC_Window_Edge_Bumper/VB_Main/MC_Play_btn/Play_Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MC_Window_Edge_Bumper/VB_Main/MC_Settings_btn/Settings_Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nrfiy"]
_data = {
"MENU_JUST_OPENED": SubResource("Animation_dsvkc"),
"RESET": SubResource("Animation_mldh7")
}

[node name="Title_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwj3x")

[node name="TR_BG_Image" parent="." instance=ExtResource("2_in8yf")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
up_bg_texture = ExtResource("3_bfksr")
down_bg_texture = ExtResource("3_bfksr")

[node name="MC_Window_Edge_Bumper" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB_Main" type="VBoxContainer" parent="MC_Window_Edge_Bumper"]
layout_mode = 2

[node name="MC_Title_Text" type="MarginContainer" parent="MC_Window_Edge_Bumper/VB_Main"]
texture_filter = 1
custom_minimum_size = Vector2(700, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MC_Window_Edge_Bumper/VB_Main/MC_Title_Text"]
texture_filter = 1
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.411765, 0.0784314, 0.0784314, 1)
theme_override_fonts/normal_font = ExtResource("4_t1wiy")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]Devil's Advocate[/center]"
scroll_active = false
autowrap_mode = 0

[node name="MC_Play_btn" type="MarginContainer" parent="MC_Window_Edge_Bumper/VB_Main"]
layout_mode = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 500

[node name="Play_Button" type="Button" parent="MC_Window_Edge_Bumper/VB_Main/MC_Play_btn"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_td2g3")
theme_override_fonts/font = ExtResource("2_loela")
theme_override_font_sizes/font_size = 25
text = "PLAY"

[node name="MC_Settings_btn" type="MarginContainer" parent="MC_Window_Edge_Bumper/VB_Main"]
layout_mode = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 500

[node name="Settings_Button" type="Button" parent="MC_Window_Edge_Bumper/VB_Main/MC_Settings_btn"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_td2g3")
text = "SETTINGS"

[node name="AP_TitleMenu" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nrfiy")
}

[connection signal="pressed" from="MC_Window_Edge_Bumper/VB_Main/MC_Play_btn/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MC_Window_Edge_Bumper/VB_Main/MC_Settings_btn/Settings_Button" to="." method="_on_settings_button_pressed"]
